[package]
name = "aoc2023"
description = "Advent of Code 2023 - my answers"
version = "0.1.0"
authors = ["Daniel Lin <ephemient@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ephemient/aoc2023/tree/main/rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2023"
path = "src/lib.rs"

[[bin]]
name = "aoc2023"
path = "src/main.rs"

[dependencies]
itertools = "0.12"
num-integer = "0.1"
rayon = "1.8"
static_init = "1.0"

[dev-dependencies]
criterion = "0.5"
indoc = "2"
pretty_assertions = "1.4"

[[bench]]
name = "criterion"
harness = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 3
